--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_ENV=production
+APP_KEY=base64:XnBWmoEDss7K1OIMC1U6UWBi1pg6bwNbjqvYsp7ySlQ=
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
@@ -19,7 +19,7 @@ BCRYPT_ROUNDS=12
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=error
 
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
